# path_planner

./: dbg.txt  dbg2.txt  dbg3.txt  dbg4.txt  dbg5.txt  dbg_b2.txt  dbg_b3.txt  diag_out.txt  diag_out3.txt  diag_out4.txt  diag_out5.txt  hex.txt  hex_err.txt  path_planner_app.py  pyproject.toml  qt.txt  strict_check.json  test.txt  test_clr.txt  test_horseshoe.txt  test_out.txt  test_out2.txt  test_out3.txt  test_spline.txt
__marimo__/session/: path_planner_app.py.json
app/__marimo__/session/: new_planner.py.json  path_planner_app.py.json
docs/: slicer_toolpath_research.md
planning/: _boundary.txt  _boundary_debug.py  _bridge_debug.py  _bridge_debug_out.txt  _bridge_same_row.py  _bridge_same_row.txt  _bypass2.py  _bypass2.txt  _bypass_out.txt  _bypass_test.py  _corner1.py  _corner1.txt  _corridor.py  _fillcheck.py  _hole_debug.py  _hole_debug.txt  _inside.py  _interrow.py  _route34.py  _route34.txt  _route_real.py  _seg.txt  _seg_debug.py  _side_corner.txt  _side_corner_debug.py  _simple_bridge.py  _simple_out.txt  _simple_test.py  _vert_debug.py  _vert_out.txt  _vertx.py  _xrange.py  _ybelow.py  _ybelow.txt  _yvalid.py  _yvalid.txt  batch_planner.py  contour_nesting.py  exceptions.py  geometry.py  (+9 more)
planning/__marimo__/session/: path_planner_app.py.json
