[project]
name = "plannig"
version = "0.1.0"
description = "Модуль построения траектории заливки по контуру из DXF/TXT"
authors = [
    {name = "Никита Коняев",email = "cinema4dmipad@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ezdxf (>=1.4.3,<2.0.0)",
    "marimo (>=0.20.4,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
